// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBar when passed detailed information correctly renders 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  <p>
    <b>
      Nerdy error!
    </b>
    <span>
       | 
      Details...
    </span>
  </p>
</div>
`;

exports[`ErrorBar when passed no detail correctly renders 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  <p>
    <b>
      Error!
    </b>
  </p>
</div>
`;
